chore(build): add grace period to deployment

--- a/kustomize/deployment.yml
+++ b/kustomize/deployment.yml
@@ -55,3 +55,4 @@ spec:
         supplementalGroups: []
         sysctls: []
       serviceAccountName: fluxy-dummy
+      terminationGracePeriodSeconds: 10
