--- a/kustomize/base/deployment.yml
+++ b/kustomize/base/deployment.yml
@@ -47,6 +47,7 @@ spec:
             runAsGroup: 65534
             runAsNonRoot: true
             runAsUser: 65534
+      initContainers: []
       securityContext:
         fsGroup: 65534
         fsGroupChangePolicy: Always
